--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: setup oss env
+    - name: copy fiels to oss
       run: |
         mkdir -p ~/bin
         curl -o ~/bin/ossuitl -L http://gosspublic.alicdn.com/ossutil/1.6.10/ossutil64
         chmod a+rx ~/bin/ossuitl
-        ossutil config -e oss-cn-hongkong.aliyuncs.com -i ${{ secrets.OSS_KEY_ID }} -k ${{ secrets.OSS_KEY_SECRET }}
-
-    - name: cp files to oss
-      run: ossutil cp -r ./ oss://github-ci/
+        ~/bin/ossutil config -e oss-cn-hongkong.aliyuncs.com -i ${{ secrets.OSS_KEY_ID }} -k ${{ secrets.OSS_KEY_SECRET }}
+        ~/bin/ossutil cp -r ./ oss://github-ci/
